[gd_scene load_steps=7 format=3 uid="uid://binvy3vb1t4na"]

[ext_resource type="PackedScene" uid="uid://dkn6pigs84nlt" path="res://Player.tscn" id="1_k0tuq"]
[ext_resource type="Script" path="res://game.gd" id="1_mrv43"]
[ext_resource type="PackedScene" uid="uid://djp2mo6nevbkf" path="res://ball.tscn" id="2_4mn5m"]
[ext_resource type="PackedScene" uid="uid://dtxgsge18vixj" path="res://goal.tscn" id="3_8bbv2"]
[ext_resource type="LabelSettings" uid="uid://vf2ihyljw5l4" path="res://score_label_settings.tres" id="4_qlqc1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rovj5"]
size = Vector2(320, 5)

[node name="Game" type="Node2D"]
script = ExtResource("1_mrv43")

[node name="BG" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="CenterLine" type="ColorRect" parent="."]
visible = false
offset_left = 159.0
offset_right = 161.0
offset_bottom = 180.0
color = Color(0.338473, 0.338473, 0.338473, 1)

[node name="PlayerOne" parent="." instance=ExtResource("1_k0tuq")]

[node name="PlayerTwo" parent="." instance=ExtResource("1_k0tuq")]
player = 1

[node name="Ball" parent="." instance=ExtResource("2_4mn5m")]
position = Vector2(158, 89)

[node name="Wall" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(160, -2.5)
shape = SubResource("RectangleShape2D_rovj5")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(0, 185)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(160, -2.5)
shape = SubResource("RectangleShape2D_rovj5")

[node name="Goal" parent="." instance=ExtResource("3_8bbv2")]
unique_name_in_owner = true

[node name="Goal2" parent="." instance=ExtResource("3_8bbv2")]
unique_name_in_owner = true
position = Vector2(340, 0)

[node name="Scores" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_top = 22.0
offset_right = 160.0
offset_bottom = 22.0

[node name="CenterContainer" type="CenterContainer" parent="Scores"]
layout_mode = 0
offset_left = -160.0
offset_top = -22.0
offset_right = 160.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="Scores/CenterContainer"]
layout_mode = 2

[node name="ScorePlayer1" type="Label" parent="Scores/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"
label_settings = ExtResource("4_qlqc1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Scores/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="ScorePlayer2" type="Label" parent="Scores/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"
label_settings = ExtResource("4_qlqc1")

[node name="Prompt" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Prompt"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="PromptLabel" type="Label" parent="Prompt/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Press space to serve"
label_settings = ExtResource("4_qlqc1")
horizontal_alignment = 1
vertical_alignment = 1
